# proseforge

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Justfile  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
adapters/file_system/: Cargo.toml
adapters/sqlite/: Cargo.toml
adapters/sqlite/migrations/: 20240829070326_initial_schema.down.sql  20240829070326_initial_schema.up.sql
adapters/sqlite/src/: lib.rs  repositories.rs
adapters/sqlite/src/repositories/: document.rs  editor.rs
app/: Cargo.toml
app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/: index.html  package.json  pnpm-lock.yaml
apps/tauri/: package.json
core/: Cargo.toml
core/src/: api.rs  config.rs  data.rs  editor.rs  error.rs  event.rs  features.rs  inbound.rs  lib.rs  md.rs  node.rs  outbound.rs  persist.rs  types.rs
core/src/author/: models.rs  ports.rs
core/src/domain/editor/: models.rs  ports.rs
core/src/editor/: component.rs  document.rs  models.rs  ports.rs  project.rs
core/src/editor/component/: models.rs
core/src/editor/document/: models.rs  ports.rs  services.rs
core/src/editor/models/: component.rs  content.rs  document.rs  project.rs
core/src/editor/ports/: component.rs  content.rs  document.rs  project.rs
core/src/editor/project/: models.rs  ports.rs  services.rs
core/src/editor/services/: document.rs
core/src/features/: author.rs
core/src/features/author/: models.rs
core/src/features/project/: models.rs  ports.rs  services.rs
core/src/features/project/models/: component.rs  document.rs  project.rs
core/src/node/: config.rs  models.rs
core/src/outbound/: data_store.rs  file_system.rs
core/src/project/: models.rs  ports.rs
core/src/project/models/: component.rs  project.rs
core/src/project/ports/: component.rs  project.rs
core/src/project/services/: project.rs
crates/common/: Cargo.toml
crates/dialogs/: Cargo.toml
crates/fs/: Cargo.toml
crates/prose_sqlite/: Cargo.toml
interface/: package.json  tailwind.config.js  vite.config.ts
src/: binder.rs  draft.rs  lib copy copy.rs  lib.rs  tree.rs
(+33 files in other folders)
