[package]
name = "md_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#

[dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
directories = "5.0.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = "1.39.3"
