[package]
name = "pf_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
rfd = "0.14.1"
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.3"
thiserror = "1.0.63"
tokio = "1.39.3"
strum_macros = "0.26.4"
rusty_ulid = { version = "2.0.0", features = ["serde", "chrono"] }
