[package]
name = "proseforge_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.3"
thiserror = "1.0.63"
tokio = "1.39.3"
strum_macros = "0.26.4"
proseforge_common = { path = "../crates/common" }
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-native-tls"] }
anyhow = "1.0.86"
